fixed alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -6,8 +6,10 @@
     font-family: 'Mulish', sans-serif;
 }
 body{
-    margin: 0 auto;
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .common-color {
